--- a/VRChat/63/952863.html
+++ b/VRChat/63/952863.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "yi/v7bnJ8J705GWYAbzhV1789Eaz4zGSit9I+1BSHw4="></script>
+    "GfO8Z5mI/lxkyOGQGkb+fc8IycmtrKgsIKqHm8bYoUc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"NTG-86 マジックハンマー","description":"魔法陣のテクスチャは二次配布ができないため各自で用意してください。\n\n魔法陣のシェーダーは\nhttp://nn-hokuson.hatenablog.com/entry/2017/03/03/202309\nこちらを参考にしました\n\n●製品内容\nテクスチャファイル(UV図込み)\nunitypackage\nreadme\nfbxファイル\n\n\n●仕様\nこの製品はfbxおよびunitypackage形式の3D武器モデルです。\n主にVRChatを想定して制作しているため、unitypackageは「Unity5.6.3p1」でのみ動作確認をしております。\n\n・unitypackage内の仕様\n配布の都合上マテリアルは全てStandardシェーダーにしております。\n裏面を表示できるシェーダー(特に魔法陣については透過処理も同時に行えるシェーダー)を各自で設定してください。\n\n●商業利用\n本データのR-18への利用や改変については自由です。\nまた、営利目的での利用も可能です。ゲーム等ご自由にお使いください。\nこのモデルを利用した作品を制作した場合は連絡を下されば大変喜びます。\n\n●禁則事項\n本データの改変が可能な状態での販売は禁止します。\n本データを利用したことによる損害に対する責任は負わないものとします。\nまた、特定個人や団体への中傷を目的とした利用を禁止します。\n本データ及びその改変モデルの著作権については大本の製作者である ガロス に帰属します。\n\n製作者　ガロス　@Garoth_suit","url":"https://booth.pm/ja/items/952863","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/3b675027-b6f1-46ed-a792-ba287fa9d0ce/i/952863/aca5bf20-7a20-423f-b1ba-bdfc5f383ebb_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yi/v7bnJ8J705GWYAbzhV1789Eaz4zGSit9I+1BSHw4="></script>
+    nonce="GfO8Z5mI/lxkyOGQGkb+fc8IycmtrKgsIKqHm8bYoUc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -388,9 +388,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
