--- a/VRChat/28/948128.html
+++ b/VRChat/28/948128.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "xFHw8g5qxLOIzohcJJdtWtswDQHtNciNxTTLE9CVkiw="></script>
+    "Ju9fPQas0Fs+SXsSnVpkaWqgQJGqIrt+TWJtCA2K73A="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Barong(可変突撃槍砲)","description":"\u003c概要\u003e\n白と金を基調としたアニメーション付き突撃槍です。起動モーションと爆発用の回転モーションがあります。ワールド座標に固定もできます。6個のパーツからできています。\n\n\u003c中身\u003e\n・unitypackage(prefab,fbx,texture,material,animation,animatorなど)\n・read me\n\n\u003cアニメーションの使い方(VRchat向け)\u003e\nanimatorで管理されているので、同封されているprefab自体をenabledするとanimationが勝手に再生されます。つまり、animation overrideで直接親をenabledさせてください。また、ワールド座標の固定は同封しているanimation overrideをご覧下さい。\n\n\u003cアニメーション\u003e\n＊動画ではパーティクルがでていますが、付属しておりません。また、テクスチャが一部違います。アニメーション確認としてご覧ください。\nhttps://twitter.com/AcysShiaruReus/status/1024985372776747008\n\n\n\u003c規約の目安\u003e\n規約は同封のread meに書いてあります。これは目安としてください。これは規約ではありません。\n・商業利用可\n・二次配布、3Dモデルとしての販売の禁止\n・著作権はすべてAcysShiaruReusに帰属する\n\n\u003cお知らせ\u003e\n1.1\n・vrcsdkなどの含めてはいけないものの削除\n・ファイルがわかりずらかったので、整理をしました","url":"https://booth.pm/ja/items/948128","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/2d13a0c0-2756-4fa9-b3b6-77f3f8714856/i/948128/46e9a47c-045d-4a26-ac13-6d43f7ebcd5f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xFHw8g5qxLOIzohcJJdtWtswDQHtNciNxTTLE9CVkiw="></script>
+    nonce="Ju9fPQas0Fs+SXsSnVpkaWqgQJGqIrt+TWJtCA2K73A="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -418,9 +418,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
