--- a/VRChat/35/950735.html
+++ b/VRChat/35/950735.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "zrHZZ/lw35lWoAZQ0yqHvbNT4Bsvze9jtk1fnDGF/DU="></script>
+    "rp3Eo1Q8HSK0pW3nAVkGewcKmuIUopYL+pfV7OdBIdg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル武器「特殊炭素繊維製軽量片手剣」","description":"【2020/4/28追記】Unity2018対応しました。\n\nいわゆるカーボンソードです。\n量産品なので簡素な作りになっています。\n無駄な装飾を必要としない、シンプルを求める貴方にこの剣は答えてくれるでしょう。\n\n【2018/8/22追記】higurashi様の使用感レビューを商品ページに追加させて頂きました。\n動画内で使用している物は一部higurashi様による改造が加えられてます。\n\nポリゴン数：オプション有601　オプション無471\n\n【利用規約】\n下記規約を確認の上、ご自由にお使いください。\n\n◆禁止事項\n・本データの再配布禁止\n（本商品に付属する全てのデータの再配布・販売は改変の有無を問わず禁止します。\n　なお、VRC等で利用するためのデータアップロード、アバターペデスタルへの利用はこれに該当しません。\n　また、ゲームやアプリケーションに使用する際には正規の手段でモデルを抽出できないようにしてください。）\n・作者を偽る行為の禁止\n・特定個人や団体への中傷を目的とした利用を禁止。\n\n◆利用可能\n・データ改変\n・商用動画等の利用\n・R-18、R-18G等での使用\n・VRC、バーチャルキャスト等での使用\n・ゲーム、アプリケーションでの利用\n\n【連絡先】\nTwitter:@VR_H_Chiharu\nmail:project.vr.otokonoko@gmail.com\nYouTube：https://www.youtube.com/channel/UCA47QiACqc5fseh7bS2dqdA\n\n2018/08/2\t1.0　完成 BOOTHにて販売開始\n2018/08/13\t1.1　Unityパッケージ内にモデルを仕込み忘れていたのとテクスチャの一部ずれを修正、小刀モデルを追加　readme、フレーバーテキスト追記\n2018/08/31\t1.11 ネーム入れサービス案内追加\n2019/03/09\t1.2　テクスチャがおかしかったのでUnity2018.4.15f1環境用に修正\n2020/04/28\t1.3  Unity2018.4.20f1環境用に一部修正\nVRChatOculusQest版用に設定した軽量モデルと作ったけど放置していたモデルを追加\nネーム入れサービス終了につきフォントのURLを記載\n一部利用規約の追加","url":"https://booth.pm/ja/items/950735","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/1703feb1-3834-4bc6-959f-543e3e223494/i/950735/515be979-480e-44d8-bb9c-259d45a66d05_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zrHZZ/lw35lWoAZQ0yqHvbNT4Bsvze9jtk1fnDGF/DU="></script>
+    nonce="rp3Eo1Q8HSK0pW3nAVkGewcKmuIUopYL+pfV7OdBIdg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -449,9 +449,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
