--- a/VRChat/05/951305.html
+++ b/VRChat/05/951305.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JFqGM59J5RS7LHxdyIJjlzaQ4CQfK/ip9R+nP04lRLY="></script>
+    "7rkBtpgi2/LsvNulXQLitSm37OxuuH9MbdGruUHT+i4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ホラーな雰囲気のホッケーマスク","description":"⊿138\nなんとなく怖い雰囲気のホッケーマスクです。\n目の部分は黒色のメッシュでふさがっているので、目を出したい場合はうまく改変してください。\n\n営利目的での使用含め全般okです。\n改変してくだされば、再配布も構いません。","url":"https://booth.pm/ja/items/951305","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/602fbacb-0d72-4af8-a5fd-519a90b362d7/i/951305/ffd56e03-46da-44cc-9df3-ba4af56d8c3d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JFqGM59J5RS7LHxdyIJjlzaQ4CQfK/ip9R+nP04lRLY="></script>
+    nonce="7rkBtpgi2/LsvNulXQLitSm37OxuuH9MbdGruUHT+i4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -403,9 +403,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
