--- a/VRChat/37/950337.html
+++ b/VRChat/37/950337.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "XuFEOoy85iox2ZQiusGbr01fkcyIqJwZBA40NMOhh+I="></script>
+    "0Q5qoHuUC5qa4YCL6yKil+AxaGmLoRo7i/SzL33i4+I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"チェックハット　無料有byもずくん","description":"http://3d.nicovideo.jp/works/td38376\n\nこちらのアイテムと一緒の内容です\n\n前回のキャスケット帽子の時は、頭に大きな物がついていることを前提に作れてなかったので（耳とか）\n大きくしてすっぽり被ってもよし、小さくしておしゃれ帽子にしてもよしなモデルを作成しました。\nそして今回はすでに4種類のテクスチャを同封しております、お好きな色を合わせてくださいね。\n\n基本VRchat前提で構成しています。\n無料配布です右記条件をチェックしてご利用ください。\n右記著作表示に関しては【もずくんの帽子使ったよ！　的なTweetとか報告してくれると嬉しいってだけです】\n\n配布物内容\n本体FBXデータ　テクスチャ4種類　りどみ \n\n著作表示　○　（著作ってより、もずくんの使ったよって報告が欲しいだけです）\n商用利用　○　（テクスチャは一部商業利用可能な物が含まれてます）\n収益　○　（収益化された配信にもどんどん使ってくれ）\n色変えや改変　○　（どんどんやって可愛いの作って）\n再配布　○　（○だけど渡すならリドミと配布URLも一緒にな）\nR18-18G　○　（どう使うねん）\n政治や宗教要素　×　（攻撃的な要素には使ってほしくない）\n","url":"https://booth.pm/ja/items/950337","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e2c0f6c5-5ba0-4d14-8298-1e93a6e970f3/i/950337/e556b939-b826-4a73-ad31-e57c87513817_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XuFEOoy85iox2ZQiusGbr01fkcyIqJwZBA40NMOhh+I="></script>
+    nonce="0Q5qoHuUC5qa4YCL6yKil+AxaGmLoRo7i/SzL33i4+I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -430,9 +430,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
